# Contextra

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
advanced_deployment/: .env.production.example  Dockerfile  docker-compose.lite.yml  docker-compose.yml
src/mcp_memory_server/: __init__.py  config.py  server.py
src/mcp_memory_server/models/: __init__.py  memory.py  project.py
src/mcp_memory_server/services/: __init__.py  embedding_service.py  memory_service.py  search_service.py  vector_service.py
src/mcp_memory_server/tools/: __init__.py  get_full_memory_by_ids.py  get_memory_details.py  list_recent_memories.py  patterns.py  search_memory_preview.py  synthesize.py  write_memory.py
